--- a/index.html
+++ b/index.html
@@ -2,25 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Rul3.0s Web</title>
     <link rel="stylesheet" href="css/default.css">
 </head>
 <body>
-    <header>
-
-    </header>
-
     <section>
         <a href="ts3server://rul3s.es">
             <figure id="ts3">
                 <img src="res/img/ts3Logo.png">
-                <figcaption>Connect to server</figcaption>
             </figure>
         </a>
     </section>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
