Added Icons, Gui Changes, Structure.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
     <link rel="stylesheet" href="css/default.css">
 </head>
 <body>
+    <header>
+        <h1>Raül Valls Serra</h1>
+        <h2>Programming, networking, security, hardware and much more</h2>
+    </header>
     <section>
-        <a href="ts3server://rul3s.es">
-            <figure id="ts3">
-                <img src="res/img/ts3Logo.png">
-            </figure>
-        </a>
+        <div id="social">
+            <h3>Social Networking</h3>
+            <a href=""><img src="res/img/icons/facebook.png"></a>
+            <a href=""><img src="res/img/icons/Linkedin.png"></a>
+            <a href=""><img src="res/img/icons/Twitter.png"></a>
+            <a href=""><img src="res/img/icons/Google+.png"></a>
+            <a href=""><img src="res/img/icons/YouTube.png"></a>
+        </div>
+        <div id="services">
+            <h3>Personal Services</h3>
+            <a href="ts3server://rul3s.es"><img src="res/img/ts3Logo.png"></a>
+            <a href=""><img src="res/img/icons/owncloud.png"></a>
+        </div>
     </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
