Links generated Use of FIGURE, prepared for hover effects h1 hover v1.0 Done

--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
         <h2>Programming, networking, security, hardware and much more</h2>
     </header>
     <section>
+
+        <h3>Social Networking</h3>
         <div id="social">
-            <h3>Social Networking</h3>
-            <a href=""><img src="res/img/icons/facebook.png"></a>
-            <a href=""><img src="res/img/icons/Linkedin.png"></a>
-            <a href=""><img src="res/img/icons/Twitter.png"></a>
-            <a href=""><img src="res/img/icons/Google+.png"></a>
-            <a href=""><img src="res/img/icons/YouTube.png"></a>
+            <figure><a href="https://www.facebook.com/rul3s" target="_blank"><img src="res/img/icons/facebook.png"></a>
+                <figcaption>Facebook</figcaption></figure>
+
+            <figure><a href="https://www.linkedin.com/in/raulvalls" target="_blank"><img src="res/img/icons/Linkedin.png"></a>
+                <figcaption>Facebook</figcaption></figure>
+
+            <figure><a href="https://twitter.com/rul3svs" target="_blank"><img src="res/img/icons/Twitter.png"></a>
+                <figcaption>Facebook</figcaption></figure>
+
+            <figure><a href="https://plus.google.com/u/0/103952667415639445548" target="_blank"><img src="res/img/icons/Google+.png"></a>
+                <figcaption>Facebook</figcaption></figure>
+
+            <figure><a href="https://github.com/rul3s" target="_blank"><img src="res/img/icons/github.ico"></a>
+                <figcaption>Facebook</figcaption></figure>
         </div>
+
+        <h3>Personal Services</h3>
         <div id="services">
-            <h3>Personal Services</h3>
-            <a href="ts3server://rul3s.es"><img src="res/img/ts3Logo.png"></a>
-            <a href=""><img src="res/img/icons/owncloud.png"></a>
+            <figure><a href="ts3server://rul3s.es"><img src="res/img/ts3Logo.png"></a>
+                <figcaption>Facebook</figcaption></figure>
+
+            <figure><a href="https://owncloud.org/"><img src="res/img/icons/owncloud.png"></a>
+                <figcaption>Facebook</figcaption></figure>
         </div>
+
     </section>
     <footer>
 
