BugFixes More CSS3 effects added v1.1

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rul3.0s Web</title>
+    <meta name="author" content="Raül Valls Serra">
+    <meta name="description" content="Raül Valls Serra professional WebSite, more about me inside.">
+    <title>Raül Valls Serra</title>
     <link rel="stylesheet" href="css/default.css">
+    <link rel="icon" type="image/png" href="res/img/favicon.png/icon.png" />
 </head>
 <body>
     <header>
         <h1>Raül Valls Serra</h1>
-        <h2>Programming, networking, security, hardware and much more</h2>
+        <h2><span class="mark">Programming</span>, <span class="mark">networking</span>,
+            <span class="mark">security</span>, <span class="mark">hardware</span> and <span class="mark">much more</span></h2>
     </header>
     <section>
 
