BugFixes More CSS3 effects added v1.1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Raül Valls Serra professional WebSite, more about me inside.">
     <title>Raül Valls Serra</title>
     <link rel="stylesheet" href="css/default.css">
-    <link rel="icon" type="image/png" href="res/img/favicon.png/icon.png" />
+    <link rel="icon" type="image/png" href="res/img/icons/icon.png" />
 </head>
 <body>
     <header>
