Icons Size Corrections Removed figurecaption

--- a/index.html
+++ b/index.html
@@ -18,29 +18,24 @@
 
         <h3>Social Networking</h3>
         <div id="social">
-            <figure><a href="https://www.facebook.com/rul3s" target="_blank"><img src="res/img/icons/facebook.png"></a>
-                <figcaption>Facebook</figcaption></figure>
-
-            <figure><a href="https://www.linkedin.com/in/raulvalls" target="_blank"><img src="res/img/icons/Linkedin.png"></a>
-                <figcaption>Facebook</figcaption></figure>
-
-            <figure><a href="https://twitter.com/rul3svs" target="_blank"><img src="res/img/icons/Twitter.png"></a>
-                <figcaption>Facebook</figcaption></figure>
-
-            <figure><a href="https://plus.google.com/u/0/103952667415639445548" target="_blank"><img src="res/img/icons/Google+.png"></a>
-                <figcaption>Facebook</figcaption></figure>
-
-            <figure><a href="https://github.com/rul3s" target="_blank"><img src="res/img/icons/github.ico"></a>
-                <figcaption>Facebook</figcaption></figure>
+            <figure><a href="https://www.facebook.com/rul3s" target="_blank">
+                <img src="res/img/icons/facebook.png"></a></figure>
+            <figure><a href="https://www.linkedin.com/in/raulvalls" target="_blank">
+                <img src="res/img/icons/Linkedin.png"></a></figure>
+            <figure><a href="https://twitter.com/rul3svs" target="_blank">
+                <img src="res/img/icons/Twitter.png"></a></figure>
+            <figure><a href="https://plus.google.com/u/0/103952667415639445548" target="_blank">
+                <img src="res/img/icons/Google+.png"></a></figure>
+            <figure><a href="https://github.com/rul3s" target="_blank">
+                <img src="res/img/icons/github.ico"></a></figure>
         </div>
 
         <h3>Personal Services</h3>
         <div id="services">
-            <figure><a href="ts3server://rul3s.es"><img src="res/img/ts3Logo.png"></a>
-                <figcaption>Facebook</figcaption></figure>
-
-            <figure><a href="https://owncloud.org/"><img src="res/img/icons/owncloud.png"></a>
-                <figcaption>Facebook</figcaption></figure>
+            <figure><a href="ts3server://rul3s.es">
+                <img src="res/img/ts3Logo.png"></a></figure>
+            <figure><a href="https://owncloud.org/">
+                <img src="res/img/icons/owncloud.png"></a></figure>
         </div>
 
     </section>
