Added bit mobile support

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Raül Valls Serra</title>
     <meta name="author" content="Raül Valls Serra">
     <meta name="description" content="Raül Valls Serra professional WebSite, more about me inside.">
-    <title>Raül Valls Serra</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/default.css">
+    <!--<link rel="stylesheet" href="css/mobile.css">-->
+
     <link rel="icon" type="image/png" href="res/img/icons/icon.png" />
 </head>
 <body>
