CSS splited fonts Started Footer Contact Div

--- a/index.html
+++ b/index.html
@@ -8,33 +8,34 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <!--<link rel="stylesheet" href="css/mobile.css">-->
 
     <link rel="icon" type="image/png" href="res/img/icons/icon.png" />
 </head>
 <body>
     <header>
-        <h1>Raül Valls Serra</h1>
-        <h2><span class="mark">Programming</span>, <span class="mark">networking</span>,
+        <h1 class="font1">Raül Valls Serra</h1>
+        <h2 class="font2"><span class="mark">Programming</span>, <span class="mark">networking</span>,
             <span class="mark">security</span>, <span class="mark">hardware</span> and <span class="mark">much more</span></h2>
     </header>
     <section>
 
-        <h3>Social Networking</h3>
+        <h3 class="font3">Social Networking</h3>
         <div id="social">
             <figure><a href="https://www.facebook.com/rul3s" target="_blank">
-                <img src="res/img/icons/facebook.png"></a></figure>
+                <img src="res/img/icons/facebook.png" alt="facebook"></a></figure>
             <figure><a href="https://www.linkedin.com/in/raulvalls" target="_blank">
-                <img src="res/img/icons/Linkedin.png"></a></figure>
+                <img src="res/img/icons/Linkedin.png" alt="linkedin"></a></figure>
             <figure><a href="https://twitter.com/rul3svs" target="_blank">
-                <img src="res/img/icons/Twitter.png"></a></figure>
+                <img src="res/img/icons/Twitter.png" alt="twitter"></a></figure>
             <figure><a href="https://plus.google.com/u/0/103952667415639445548" target="_blank">
-                <img src="res/img/icons/Google+.png"></a></figure>
+                <img src="res/img/icons/Google+.png" alt="google+"></a></figure>
             <figure><a href="https://github.com/rul3s" target="_blank">
-                <img src="res/img/icons/github.ico"></a></figure>
+                <img src="res/img/icons/github.ico" alt="github"></a></figure>
         </div>
 
-        <h3>Personal Services</h3>
+        <h3 class="font3">Personal Services</h3>
         <div id="services">
             <figure><a href="ts3server://rul3s.es">
                 <img src="res/img/ts3Logo.png"></a></figure>
@@ -44,7 +45,10 @@
 
     </section>
     <footer>
-
+        <div id="contact" class="font2">
+            <span>Contact</span>
+            <div id="mail">MailMe!</div>
+        </div>
     </footer>
 </body>
 </html>
