--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 
     </section>
     <footer>
-        <div id="contact" class="font2">
-            <span>Contact</span>
-            <div id="mail">MailMe!</div>
+        <div id="contact">
+            <span class="font3">CONTrACT</span>
+            <div id="mail" class="hide font3"><img  src="res/img/icons/mail.png" alt="mail">MailMe!</div>
+            <div id="phone" class="hide font3"><img  src="res/img/icons/phone.png" alt="mail">PhoneMe!</div>
         </div>
     </footer>
 </body>
