--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Raül Valls Serra professional WebSite, more about me inside.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"href="css/desktop.css">
+    <link rel="stylesheet" media="(min-width: 1024px)" href="css/desktop.css">
+    <link rel="stylesheet" media="(max-width: 1024px) or (min-resolution: 300dpi)" href="css/mobile.css">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <script src="js/code.js"></script>
