--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <title>Raül Valls Serra</title>
     <meta name="author" content="Raül Valls Serra">
     <meta name="description" content="Raül Valls Serra professional WebSite, more about me inside.">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="(min-width: 1024px)" href="css/desktop.css">
-    <link rel="stylesheet" media="(max-width: 1024px) or (min-resolution: 300dpi)" href="css/mobile.css">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
+
+    <link rel="stylesheet"
+          media="(orientation:landscape)"
+          href="css/desktop.css">
+
+    <link rel="stylesheet"
+          media="(orientation:portrait)"
+          href="css/mobile.css">
+
     <script src="js/code.js"></script>
 
     <link rel="icon" type="image/png" href="res/img/icons/icon.png" />
