--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Raül Valls Serra</title>
     <meta name="author" content="Raül Valls Serra">
     <meta name="description" content="Raül Valls Serra professional WebSite, more about me inside.">
-    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
 
     <link rel="stylesheet"
@@ -39,7 +38,7 @@
             <figure><a href="https://plus.google.com/u/0/103952667415639445548" target="_blank">
                 <img src="res/img/icons/Google+.png" alt="google+"></a></figure>
             <figure><a href="https://github.com/rul3s" target="_blank">
-                <img src="res/img/icons/github.ico" alt="github"></a></figure>
+                <img src="res/img/icons/github.png" alt="github"></a></figure>
         </div>
 
         <h3 class="font3">Personal Services</h3>
